[metadata]
name = realsr-ncnn-vulkan-python
version = 1.0.0
author = tmddn3070
author_email = tmddn3070@gmail.com
maintainer = team tros
maintainer_email = contact@tros.lol
license = MIT
license_file = LICENSE
platform = any
description = A Python FFI of nihui/realsr-ncnn-vulkan achieved with SWIG
url = https://github.com/team-tros/realsr-and-realesrgan-ncnn-vulkan-python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords =
    realsr
    ncnn
    vulkan
    swig

[options]
packages = find:
install_requires = pillow
python_requires = >=3.6
